# BaseballScorecardGenerator

./: .gitignore  CHANGELOG.md  README.md  at_bat.py  inning.py  lineup.py  main.py  pitch.py  pitcher_lineup.py  player.py  pyproject.toml  roster.py  scorecard.py  team.py
baseball_scorecard/: baseball_scorecard.py
baseball_scorecard/metapost/: metapost_builder.py
baseball_scorecard/misc/: game_info.py  umpire.py
baseball_scorecard/plays/: advance.py  at_base.py  at_bat.py  inning.py  no_ab.py  thrown_out.py  waybase.py
baseball_scorecard/stats/: batter_stats.py  inning_stats.py  pitcher_stats.py  team_stats.py
baseball_scorecard/team/: lineup.py  pitcher_lineup.py  player.py  reserves.py  roster.py  team.py
examples/: 20030627-fla-at-bos.py  20130608-mia-at-nym.py  20180403-bos-at-mia.py  20180803-nyy-at-bos.py  20180811-tbr-at-tor.py  20180814-bos-at-phi.py  20230417-laa-at-bos.py  20240729-sea-at-bos.py  20240812-tex-at-bos.py  compile.sh
scorecard/: at_bat.py  inning.py  lineup.py  pitcher_lineup.py  player.py  reserves.py  roster.py  scorecard.py  team.py
scorecard/metapost/: metapost_builder.py
scorecard/misc/: game_info.py  umpire.py
scorecard/plays/: advance.py  at_base.py  at_bat.py  inning.py  no_ab.py  out.py  pitch.py  thrown_out.py  waybase.py
scorecard/stats/: batter_stats.py  pitcher_stats.py  team_stats.py
scorecard/team/: lineup.py  pitcher_lineup.py  player.py  reserves.py  roster.py  team.py
tests/integration/: test_baseball_scorecard.py
tests/misc/: test_game_info.py
tests/plays/: test_out.py
(+55 files in other folders)
