[tool.poetry]
name = "baseball_scorecard"
version = "0.1.1"
description = "API to programatically generate baseball scorecards as PDFs."
authors = ["Vicyorus <andres.chaves.diaz@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
